--- a/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
@@ -1,8 +1,33 @@
 :root {
+    -unity-font-definition: url("project://database/Assets/UI/Fonts/DynaPuff-Medium.ttf?fileID=12800000&guid=878b0c34017fe4af78ef740149645645&type=3#DynaPuff-Medium");
+    font-size: 40px;
 }
 
 .header {
+    color: rgb(255, 255, 255);
+    font-size: 60px;
+    -unity-text-align: upper-center;
 }
 
 .button {
+    background-image: url("project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-1719211324008201725&guid=68de98d899585b7469e0fb40a0fcbc56&type=3#bt_10");
+    width: 220px;
+    height: 60px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-size: 20px;
+    margin-top: 50px;
+    -unity-font-definition: url("project://database/Assets/UI/Fonts/DynaPuff-Medium.ttf?fileID=12800000&guid=878b0c34017fe4af78ef740149645645&type=3#DynaPuff-Medium");
+    color: rgb(255, 255, 255);
+    align-self: center;
+    transition-duration: 0.35s;
+}
+
+
+
+.button:hover {
+    background-color: rgb(0, 0, 0);
+    scale: 1.1 1.1;
 }
