--- a/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
@@ -5,7 +5,7 @@
 
 .header {
     color: rgb(255, 255, 255);
-    font-size: 60px;
+    font-size: 100px;
     -unity-text-align: upper-center;
 }
 
@@ -25,9 +25,11 @@
     transition-duration: 0.35s;
 }
 
-
-
 .button:hover {
     background-color: rgb(0, 0, 0);
     scale: 1.1 1.1;
+}
+
+.label {
+    color: rgb(255, 255, 255);
 }
