--- a/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
+++ b/BricksProject/Assets/UI Toolkit/MainMenuStyle.uss
@@ -33,4 +33,12 @@
 
 .label {
     color: rgb(255, 255, 255);
+    font-size: 25px;
+    margin-top: 20px;
+}
+
+.textfield {
+    width: 600px;
+    height: 50px;
+    font-size: 14px;
 }
