--- a/BricksProject/Assets/UI Toolkit/ImportMenuScreen.uxml
+++ b/BricksProject/Assets/UI Toolkit/ImportMenuScreen.uxml
@@ -7,7 +7,7 @@
         <ui:Label text="Selected File:" name="SelectLabel" class="label"/>
         <ui:TextField label="" placeholder-text="" name="SelectInput" class="textfield"/>
         <ui:Label text="File Content:" name="ContentLabel" class="label"/>
-        <ui:TextField label="" placeholder-text="" name="ContentInput" class="textfield" style="height: 200px;"/>
+        <ui:TextField label="" placeholder-text="" name="ContentInput" multiline="true" class="textfield" style="height: 200px;"/>
         <ui:Button text="Import File" name="ImportButton" class="button" style="background-image: url(&quot;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-1719211324008201725&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_10&quot;);"/>
     </ui:VisualElement>
 </ui:UXML>
