--- a/BricksProject/Assets/UI Toolkit/MainMenuScreen.uxml
+++ b/BricksProject/Assets/UI Toolkit/MainMenuScreen.uxml
@@ -3,6 +3,7 @@
     <ui:VisualElement name="Container" style="flex-grow: 1;">
         <ui:Label text="Main Menu" name="Header" class="header"/>
         <ui:Button text="Start" name="StartButton" class="button"/>
+        <ui:Button text="About" name="AboutButton" class="button" style="background-image: url(&quot;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=3353583685574914904&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_08&quot;);"/>
         <ui:Button text="Quit" name="QuitButton" class="button" style="background-image: url(&quot;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=4994445659741841102&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_12&quot;);"/>
     </ui:VisualElement>
 </ui:UXML>
