--- a/BricksProject/Assets/UI Toolkit/B04_BricksMenu/BricksMenuScreen.uxml
+++ b/BricksProject/Assets/UI Toolkit/B04_BricksMenu/BricksMenuScreen.uxml
@@ -1,10 +1,11 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/UI%20Toolkit/MainMenuStyle.uss?fileID=7433441132597879392&amp;guid=36d7cd5e932fc4aa5a18ac116132cd4d&amp;type=3#MainMenuStyle"/>
+    <Style src="project://database/Assets/UI%20Toolkit/B01_MainMenu/MainMenuStyle.uss?fileID=7433441132597879392&amp;guid=36d7cd5e932fc4aa5a18ac116132cd4d&amp;type=3#MainMenuStyle"/>
     <ui:VisualElement name="Container" style="flex-grow: 1;">
         <ui:Label text="Bricks" name="Header" class="header"/>
+        <ui:Toggle label="TreeList Display" name="TreeListToggle" value="true" class="label" style="margin-left: 50px; font-size: 35px;"/>
         <ui:VisualElement name="Container" style="flex-grow: 1; flex-direction: row; align-content: flex-end;">
-            <ui:Button text="&lt;-- Previous" name="PreviousButton" class="button" style="background-image: url(&quot;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-4049586787112731939&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_09&quot;);"/>
-            <ui:Button text="Next --&gt;" name="NextButton" class="button" style="background-image: url(&quot;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-4049586787112731939&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_09&quot;);"/>
+            <ui:Button text="&lt;-- Previous" name="PreviousButton" class="button" style="background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI/Textures/UI_atlas.psd?fileID=-4049586787112731939&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_09&quot;);"/>
+            <ui:Button text="Next --&gt;" name="NextButton" class="button" style="background-image: url(&quot;project://database/Assets/UI%20Toolkit/UI/Textures/UI_atlas.psd?fileID=-4049586787112731939&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_09&quot;);"/>
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
